# PersonalOS

./: .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierignore  README.md  SECURITY_AUDIT.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.husky/: pre-push
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: bootstrap.rs  chat_service.rs  dashboard_service.rs  document_service.rs  metadata_service.rs  mod.rs  ocr_service.rs  reminder_service.rs  timeline_service.rs  upload_service.rs  vector_service.rs
src-tauri/src/domain/: document.rs  error.rs  mod.rs
src-tauri/src/infrastructure/: chat_repository.rs  crypto.rs  keychain.rs  metadata_repository.rs  mod.rs  ocr_repository.rs  ollama_client.rs  sqlite_document_repository.rs  storage_error.rs  upload_repository.rs  vector_repository.rs
src-tauri/src/presentation/commands/: chat.rs  dashboard.rs  documents.rs  health.rs  library.rs  metadata.rs  mod.rs  ocr.rs  reminders.rs  timeline.rs  uploads.rs
src/application/: README.md
src/domain/: README.md
src/infrastructure/: README.md
src/ui/app/: App.tsx
src/ui/features/uploads/: UploadDropzone.tsx
src/ui/lib/: desktop.ts
src/ui/pages/: ChatPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  HomePage.tsx  SettingsPage.tsx  TimelinePage.tsx
src/ui/shared/: Sidebar.tsx  navigation.ts  primitives.tsx
src/ui/styles/: globals.css
