[package]
name = "lifeos"
version = "0.1.0"
description = "Privacy-first Personal AI Life Organizer"
authors = ["LifeOS"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lifeos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
arrow-array = "58.3"
arrow-schema = "58.3"
futures = "0.3"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service"] }
lancedb = "0.30"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
uuid = { version = "1.11", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zeroize = "1.8"
